--- a/xinx/ui/snipetproperty.ui
+++ b/xinx/ui/snipetproperty.ui
@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>611</width>
-    <height>443</height>
+    <width>596</width>
+    <height>595</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -68,7 +68,20 @@
        </widget>
       </item>
       <item row="5" column="2" >
-       <widget class="QTextEdit" name="m_descriptionTextEdit" />
+       <widget class="QTextEdit" name="m_descriptionTextEdit" >
+        <property name="sizePolicy" >
+         <sizepolicy vsizetype="Maximum" hsizetype="Expanding" >
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="maximumSize" >
+         <size>
+          <width>16777215</width>
+          <height>100</height>
+         </size>
+        </property>
+       </widget>
       </item>
       <item row="1" column="2" >
        <widget class="QLineEdit" name="m_iconLineEdit" />
@@ -145,21 +158,18 @@
    </item>
    <item row="1" column="0" colspan="2" >
     <widget class="QGroupBox" name="m_templateGroupBox" >
-     <property name="sizePolicy" >
-      <sizepolicy vsizetype="Minimum" hsizetype="Preferred" >
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="minimumSize" >
-      <size>
-       <width>0</width>
-       <height>100</height>
-      </size>
-     </property>
      <property name="title" >
       <string>&amp;Template text :</string>
      </property>
+     <layout class="QGridLayout" >
+      <item row="0" column="0" >
+       <widget class="QTextEdit" name="m_textEdit" >
+        <property name="lineWrapMode" >
+         <enum>QTextEdit::NoWrap</enum>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
    <item row="2" column="0" colspan="2" >
