--- a/xinx/ui/custom.ui
+++ b/xinx/ui/custom.ui
@@ -942,6 +942,9 @@
          <property name="alternatingRowColors" >
           <bool>true</bool>
          </property>
+         <property name="selectionBehavior" >
+          <enum>QAbstractItemView::SelectRows</enum>
+         </property>
         </widget>
        </item>
        <item row="2" column="0" >
