--- a/xinx/ui/custom.ui
+++ b/xinx/ui/custom.ui
@@ -5,7 +5,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>681</width>
+    <width>797</width>
     <height>483</height>
    </rect>
   </property>
@@ -171,8 +171,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>528</width>
-        <height>395</height>
+        <width>644</width>
+        <height>391</height>
        </rect>
       </property>
       <layout class="QGridLayout" >
@@ -1119,8 +1119,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>528</width>
-        <height>395</height>
+        <width>644</width>
+        <height>391</height>
        </rect>
       </property>
       <layout class="QGridLayout" >
@@ -1134,8 +1134,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>506</width>
-            <height>353</height>
+            <width>622</width>
+            <height>346</height>
            </rect>
           </property>
           <attribute name="title" >
@@ -1157,12 +1157,12 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>512</width>
-            <height>307</height>
+            <width>622</width>
+            <height>346</height>
            </rect>
           </property>
           <attribute name="title" >
-           <string>Script</string>
+           <string>Scripts</string>
           </attribute>
           <layout class="QGridLayout" >
            <item row="0" column="0" >
