Insertion en cours

--- a/xinx/ui/custom.ui
+++ b/xinx/ui/custom.ui
@@ -157,7 +157,7 @@
    <item row="2" column="1" >
     <widget class="QStackedWidget" name="stackedWidget" >
      <property name="currentIndex" >
-      <number>7</number>
+      <number>0</number>
      </property>
      <property name="color" stdset="0" >
       <color>
@@ -993,7 +993,17 @@
         </widget>
        </item>
        <item row="1" column="0" colspan="6" >
-        <widget class="QTreeView" name="m_snipetTreeView" />
+        <widget class="QTreeView" name="m_snipetTreeView" >
+         <property name="alternatingRowColors" >
+          <bool>true</bool>
+         </property>
+         <property name="selectionMode" >
+          <enum>QAbstractItemView::ExtendedSelection</enum>
+         </property>
+         <property name="rootIsDecorated" >
+          <bool>false</bool>
+         </property>
+        </widget>
        </item>
        <item row="2" column="0" >
         <widget class="QPushButton" name="m_addPushButton" >
@@ -1085,8 +1095,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>528</width>
-        <height>395</height>
+        <width>644</width>
+        <height>391</height>
        </rect>
       </property>
       <layout class="QGridLayout" >
@@ -1124,8 +1134,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>100</width>
-            <height>30</height>
+            <width>622</width>
+            <height>346</height>
            </rect>
           </property>
           <attribute name="title" >
