--- a/xinx/ui/custom.ui
+++ b/xinx/ui/custom.ui
@@ -172,7 +172,7 @@
         <x>0</x>
         <y>0</y>
         <width>644</width>
-        <height>391</height>
+        <height>395</height>
        </rect>
       </property>
       <layout class="QGridLayout" >
@@ -978,7 +978,7 @@
         <x>0</x>
         <y>0</y>
         <width>644</width>
-        <height>391</height>
+        <height>395</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout" >
@@ -1001,6 +1001,9 @@
           <enum>QAbstractItemView::ExtendedSelection</enum>
          </property>
          <property name="rootIsDecorated" >
+          <bool>false</bool>
+         </property>
+         <property name="itemsExpandable" >
           <bool>false</bool>
          </property>
         </widget>
@@ -1096,7 +1099,7 @@
         <x>0</x>
         <y>0</y>
         <width>644</width>
-        <height>391</height>
+        <height>395</height>
        </rect>
       </property>
       <layout class="QGridLayout" >
@@ -1120,7 +1123,7 @@
         <x>0</x>
         <y>0</y>
         <width>644</width>
-        <height>391</height>
+        <height>395</height>
        </rect>
       </property>
       <layout class="QGridLayout" >
@@ -1135,7 +1138,7 @@
             <x>0</x>
             <y>0</y>
             <width>622</width>
-            <height>346</height>
+            <height>353</height>
            </rect>
           </property>
           <attribute name="title" >
